load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "config.go",
        "config_utils_develop.go",  # keep
        "config_utils_prod.go",
        "io_config.go",
        "loader.go",
        "mainnet_config.go",
        "minimal_config.go",
        "network_config.go",
        "testnet_e2e_config.go",
        "testnet_pyrmont_config.go",
        "testnet_testnet8_config.go",
        "testutils.go",
        "values.go",
    ],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/config/params",
    visibility = ["//visibility:public"],
    deps = [
        "//config/fieldparams:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//math:go_default_library",
        "@com_github_mohae_deepcopy//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prysmaticlabs_eth2_types//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@network_waterfall_gitlab_waterfall_protocol_gwat//common:go_default_library",
        "@network_waterfall_gitlab_waterfall_protocol_gwat//params:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = [
        "checktags_test.go",
        "config_test.go",
        "loader_test.go",
        "testnet_config_test.go",
        "testnet_testnet8_config_test.go",
    ],
    data = glob(["*.yaml"]) + [
        "testdata/e2e_config.yaml",
        "@coordinator_spec_tests_mainnet//:test_data",
        "@eth2_networks//:configs",
    ],
    gotags = ["develop"],
    race = "on",
    deps = [
        ":go_default_library",
        "//io/file:go_default_library",
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
    ],
)

filegroup(
    name = "custom_configs",
    srcs = glob(["testdata/*.yaml"]),
    visibility = ["//testing:__subpackages__"],
)
