load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["http_backup_handler.go"],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/monitoring/backup",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)
