load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["mclock.go"],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/time/mclock",
    visibility = ["//visibility:public"],
    deps = ["@com_github_aristanetworks_goarista//monotime:go_default_library"],
)
