load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "errors.go",
        "interface.go",
    ],
    importpath = "github.com/waterfall-foundation/coordinator/beacon-chain/db/iface",
    # Other packages must use github.com/waterfall-foundation/coordinator/beacon-chain/db.Database alias.
    visibility = ["//beacon-chain/db:__subpackages__"],
    deps = [
        "//beacon-chain/db/filters:go_default_library",
        "//beacon-chain/slasher/types:go_default_library",
        "//beacon-chain/state:go_default_library",
        "//monitoring/backup:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//proto/prysm/v1alpha1/block:go_default_library",
        "@network_waterfall_gitlab_waterfall_protocol_gwat//common:go_default_library",
        "@com_github_prysmaticlabs_eth2_types//:go_default_library",
    ],
)
