load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["types.go"],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/beacon-chain/forkchoice/types",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prysmaticlabs_eth2_types//:go_default_library"],
)
