load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "aggregation.go",
        "caches.go",
        "pool.go",
    ],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/beacon-chain/operations/prevote",
    visibility = [
        "//beacon-chain:__subpackages__",
        "//testing/spectest:__subpackages__",
    ],
    deps = [
        "//beacon-chain/core/helpers:go_default_library",
        "//cache/lru:go_default_library",
        "//config/params:go_default_library",
        "//crypto/hash:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//proto/prysm/v1alpha1/attestation/aggregation/attestations:go_default_library",
        "//time:go_default_library",
        "//time/slots:go_default_library",
        "@com_github_hashicorp_golang_lru//:go_default_library",
        "@com_github_prometheus_client_golang//prometheus:go_default_library",
        "@com_github_prometheus_client_golang//prometheus/promauto:go_default_library",
        "@com_github_prysmaticlabs_eth2_types//:go_default_library",
        "@com_github_patrickmn_go_cache//:go_default_library",
        "@com_github_prysmaticlabs_go_bitfield//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_opencensus_go//trace:go_default_library",
        "@com_github_pkg_errors//:go_default_library",

    ],
)
