load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "doc.go",
        "service.go",
    ],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/beacon-chain/operations/withdrawals",
    visibility = [
        "//beacon-chain:__subpackages__",
    ],
    deps = [
        "//beacon-chain/core/helpers:go_default_library",
        "//beacon-chain/state:go_default_library",
        "//config/params:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "//time/slots:go_default_library",
        "@com_github_prysmaticlabs_eth2_types//:go_default_library",
        "@com_github_sirupsen_logrus//:go_default_library",
        "@io_opencensus_go//trace:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    size = "small",
    srcs = ["service_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//config/params:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "@com_github_prysmaticlabs_eth2_types//:go_default_library",
        "@org_golang_google_protobuf//proto:go_default_library",
    ],
)
