load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = [
        "mock_engine_client.go",
        "mock_faulty_powchain.go",
        "mock_powchain.go",
    ],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/beacon-chain/powchain/testing",
    visibility = [
        "//beacon-chain:__subpackages__",
    ],
    deps = [
        "//async/event:go_default_library",
        "//beacon-chain/state:go_default_library",
        "//beacon-chain/state/v1:go_default_library",
        "//config/params:go_default_library",
        "//encoding/bytesutil:go_default_library",
        "//proto/engine/v1:go_default_library",
        "//proto/prysm/v1alpha1:go_default_library",
        "@com_github_holiman_uint256//:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
        "@com_github_prysmaticlabs_eth2_types//:go_default_library",
        "@network_waterfall_gitlab_waterfall_protocol_gwat//accounts/abi/bind/backends:go_default_library",
        "@network_waterfall_gitlab_waterfall_protocol_gwat//common:go_default_library",
        "@network_waterfall_gitlab_waterfall_protocol_gwat//common/hexutil:go_default_library",
        "@network_waterfall_gitlab_waterfall_protocol_gwat//core/types:go_default_library",
        "@network_waterfall_gitlab_waterfall_protocol_gwat//rpc:go_default_library",
    ],
)
