load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["eth1_types.go"],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/beacon-chain/powchain/types",
    visibility = ["//beacon-chain:__subpackages__"],
    deps = [
        "//encoding/bytesutil:go_default_library",
        "@network_waterfall_gitlab_waterfall_protocol_gwat//common:go_default_library",
        "@network_waterfall_gitlab_waterfall_protocol_gwat//core/types:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["eth1_types_test.go"],
    embed = [":go_default_library"],
    deps = [
        "@network_waterfall_gitlab_waterfall_protocol_gwat//common:go_default_library",
        "@network_waterfall_gitlab_waterfall_protocol_gwat//core/types:go_default_library",
    ],
)
