load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "api.go",
        "file.go",
    ],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/beacon-chain/sync/genesis",
    visibility = ["//visibility:public"],
    deps = [
        "//api/client/beacon:go_default_library",
        "//beacon-chain/db:go_default_library",
        "//io/file:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)
