load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "flags.go",
        "interop.go",
    ],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/cmd/validator/flags",
    visibility = [
        "//cmd/validator:__subpackages__",
        "//testing/endtoend:__subpackages__",
        "//validator:__subpackages__",
    ],
    deps = [
        "//config/fieldparams:go_default_library",
        "//io/file:go_default_library",
        "@com_github_urfave_cli_v2//:go_default_library",
    ],
)
