load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fee-recipient-config.go"],
    importpath = "github.com/waterfall-foundation/coordinator/config/validator/service",
    visibility = ["//visibility:public"],
    deps = [
        "//config/fieldparams:go_default_library",
        "@com_github_waterfall_foundation_gwat//common:go_default_library",
    ],
)
