load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["fee-recipient-config.go"],
    importpath = "github.com/waterfall-foundation/coordinator/config/validator/service",
    visibility = ["//visibility:public"],
    deps = [
        "//config/fieldparams:go_default_library",
        "@network_waterfall_gitlab_waterfall_protocol_gwat//common:go_default_library",
    ],
)
