load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["mock.go"],
    importpath = "github.com/waterfall-foundation/coordinator/contracts/deposit/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//contracts/deposit:go_default_library",
        "@com_github_waterfall_foundation_gwat//accounts/abi:go_default_library",
        "@com_github_waterfall_foundation_gwat//accounts/abi/bind:go_default_library",
        "@com_github_waterfall_foundation_gwat//accounts/abi/bind/backends:go_default_library",
        "@com_github_waterfall_foundation_gwat//common:go_default_library",
        "@com_github_waterfall_foundation_gwat//core:go_default_library",
        "@com_github_waterfall_foundation_gwat//core/types:go_default_library",
        "@com_github_waterfall_foundation_gwat//crypto:go_default_library",
    ],
)
