load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "constants.go",
        "error.go",
        "interface.go",
    ],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/crypto/bls/common",
    visibility = [
        "//crypto/bls:__subpackages__",
        "//testing:__subpackages__",
    ],
    deps = ["//config/fieldparams:go_default_library"],
)
