load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["hashtree.go"],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/crypto/hash/htr",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prysmaticlabs_gohashtree//:go_default_library"],
)
