load("@prysm//tools/go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["params.go"],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/testing/endtoend/params",
    visibility = ["//testing/endtoend:__subpackages__"],
    deps = [
        "@io_bazel_rules_go//go/tools/bazel:go_default_library",
        "@network_waterfall_gitlab_waterfall_protocol_gwat//common:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["params_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//testing/assert:go_default_library",
        "//testing/require:go_default_library",
    ],
)
