load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["policies.go"],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/testing/endtoend/policies",
    visibility = ["//visibility:public"],
    deps = ["@com_github_prysmaticlabs_eth2_types//:go_default_library"],
)
