load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["keygen.go"],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/tools/unencrypted-keys-gen/keygen",
    visibility = ["//visibility:public"],
    deps = ["@com_github_sirupsen_logrus//:go_default_library"],
)
