load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["names.go"],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/validator/accounts/petnames",
    visibility = ["//validator:__subpackages__"],
    deps = [
        "//crypto/hash:go_default_library",
        "//crypto/rand:go_default_library",
    ],
)
