load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = ["mock.go"],
    importpath = "github.com/waterfall-foundation/coordinator/beacon-chain/sync/initial-sync/testing",
    visibility = [
        "//beacon-chain:__subpackages__",
    ],
)
