load("@prysm//tools/go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    testonly = True,
    srcs = [
        "shuffle.go",
        "shuffle_test_format.go",
    ],
    importpath = "gitlab.waterfall.network/waterfall/protocol/coordinator/testing/spectest/shared/phase0/shuffling/core/shuffle",
    visibility = ["//testing/spectest:__subpackages__"],
    deps = [
        "//beacon-chain/core/helpers:go_default_library",
        "//testing/require:go_default_library",
        "//testing/spectest/utils:go_default_library",
        "//testing/util:go_default_library",
        "@com_github_prysmaticlabs_eth2_types//:go_default_library",
        "@in_gopkg_yaml_v2//:go_default_library",
        "@network_waterfall_gitlab_waterfall_protocol_gwat//common:go_default_library",
    ],
)
